src/syntax.output
Terminals unused in grammar

    ERRORA


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT ID LC DefList RC
   12                | STRUCT ID

   13 VarDec: ID
   14       | VarDec LB INT RB

   15 FunDec: ID LP VarList RP
   16       | ID LP RP
   17       | ID LP error

   18 VarList: ParamDec COMMA VarList
   19        | ParamDec

   20 ParamDec: Specifier VarDec

   21 CompSt: LC DefList StmtList RC

   22 StmtList: Stmt StmtList
   23         | %empty

   24 Stmt: Exp SEMI
   25     | Exp error
   26     | CompSt
   27     | RETURN Exp SEMI
   28     | RETURN Exp error
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt

   32 DefList: Def DefList
   33        | %empty

   34 Def: Specifier DecList SEMI
   35    | Specifier DecList error

   36 DecList: Dec
   37        | Dec COMMA DecList

   38 Dec: VarDec
   39    | VarDec ASSIGN Exp

   40 Exp: Exp ASSIGN Exp
   41    | Exp AND Exp
   42    | Exp OR Exp
   43    | Exp LT Exp
   44    | Exp LE Exp
   45    | Exp GT Exp
   46    | Exp GE Exp
   47    | Exp NE Exp
   48    | Exp EQ Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp MUL Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT
   63    | CHAR
   64    | LP Exp error
   65    | ID LP error

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 17 25 28 35 64 65
    INT (258) 14 61
    CHAR (259) 63
    FLOAT (260) 62
    ID (261) 11 12 13 15 16 17 56 57 59 60 65
    TYPE (262) 9
    STRUCT (263) 11 12
    IF (264) 29 30
    WHILE (265) 31
    RETURN (266) 27 28
    SEMI (267) 4 5 24 27 34
    COMMA (268) 8 18 37 66
    LC (269) 11 21
    RC (270) 11 21
    ERRORA (271)
    LOWER_IF (272)
    ELSE (273) 30
    ASSIGN (274) 39 40
    OR (275) 42
    AND (276) 41
    LT (277) 43
    LE (278) 44
    GT (279) 45
    GE (280) 46
    NE (281) 47
    EQ (282) 48
    PLUS (283) 49
    MINUS (284) 50 54
    MUL (285) 51
    DIV (286) 52
    UMINUS (287)
    NOT (288) 55
    DOT (289) 59
    LP (290) 15 16 17 29 30 31 53 56 57 64 65
    RP (291) 15 16 29 30 31 53 56 57
    LB (292) 14 58
    RB (293) 14 58


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    Program (40)
        on left: 1
        on right: 0
    ExtDefList (41)
        on left: 2 3
        on right: 1 2
    ExtDef (42)
        on left: 4 5 6
        on right: 2
    ExtDecList (43)
        on left: 7 8
        on right: 4 8
    Specifier (44)
        on left: 9 10
        on right: 4 5 6 20 34 35
    StructSpecifier (45)
        on left: 11 12
        on right: 10
    VarDec (46)
        on left: 13 14
        on right: 7 8 14 20 38 39
    FunDec (47)
        on left: 15 16 17
        on right: 6
    VarList (48)
        on left: 18 19
        on right: 15 18
    ParamDec (49)
        on left: 20
        on right: 18 19
    CompSt (50)
        on left: 21
        on right: 6 26
    StmtList (51)
        on left: 22 23
        on right: 21 22
    Stmt (52)
        on left: 24 25 26 27 28 29 30 31
        on right: 22 29 30 31
    DefList (53)
        on left: 32 33
        on right: 11 21 32
    Def (54)
        on left: 34 35
        on right: 32
    DecList (55)
        on left: 36 37
        on right: 34 35 37
    Dec (56)
        on left: 38 39
        on right: 36 37
    Exp (57)
        on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 24 25 27 28 29 30 31 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 58 59 64 66 67
    Args (58)
        on left: 66 67
        on right: 56 66


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . ID LC DefList RC
   12                | STRUCT . ID

    ID  shift, and go to state 8


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 11
    SEMI  shift, and go to state 12

    ExtDecList  go to state 13
    VarDec      go to state 14
    FunDec      go to state 15


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   11 StructSpecifier: STRUCT ID . LC DefList RC
   12                | STRUCT ID .

    LC  shift, and go to state 16

    $default  reduce using rule 12 (StructSpecifier)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 11

   13 VarDec: ID .
   15 FunDec: ID . LP VarList RP
   16       | ID . LP RP
   17       | ID . LP error

    LP  shift, and go to state 17

    $default  reduce using rule 13 (VarDec)


State 12

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 13

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 18


State 14

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   14 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 19
    LB     shift, and go to state 20

    $default  reduce using rule 7 (ExtDecList)


State 15

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 21

    CompSt  go to state 22


State 16

   11 StructSpecifier: STRUCT ID LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        go to state 23
    StructSpecifier  go to state 7
    DefList          go to state 24
    Def              go to state 25


State 17

   15 FunDec: ID LP . VarList RP
   16       | ID LP . RP
   17       | ID LP . error

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 27

    Specifier        go to state 28
    StructSpecifier  go to state 7
    VarList          go to state 29
    ParamDec         go to state 30


State 18

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 19

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 31

    ExtDecList  go to state 32
    VarDec      go to state 14


State 20

   14 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 33


State 21

   21 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        go to state 23
    StructSpecifier  go to state 7
    DefList          go to state 34
    Def              go to state 25


State 22

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 23

   34 Def: Specifier . DecList SEMI
   35    | Specifier . DecList error

    ID  shift, and go to state 31

    VarDec   go to state 35
    DecList  go to state 36
    Dec      go to state 37


State 24

   11 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 38


State 25

   32 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        go to state 23
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 25


State 26

   17 FunDec: ID LP error .

    $default  reduce using rule 17 (FunDec)


State 27

   16 FunDec: ID LP RP .

    $default  reduce using rule 16 (FunDec)


State 28

   20 ParamDec: Specifier . VarDec

    ID  shift, and go to state 31

    VarDec  go to state 40


State 29

   15 FunDec: ID LP VarList . RP

    RP  shift, and go to state 41


State 30

   18 VarList: ParamDec . COMMA VarList
   19        | ParamDec .

    COMMA  shift, and go to state 42

    $default  reduce using rule 19 (VarList)


State 31

   13 VarDec: ID .

    $default  reduce using rule 13 (VarDec)


State 32

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 33

   14 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 43


State 34

   21 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 44
    CHAR    shift, and go to state 45
    FLOAT   shift, and go to state 46
    ID      shift, and go to state 47
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49
    RETURN  shift, and go to state 50
    LC      shift, and go to state 21
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53

    $default  reduce using rule 23 (StmtList)

    CompSt    go to state 54
    StmtList  go to state 55
    Stmt      go to state 56
    Exp       go to state 57


State 35

   14 VarDec: VarDec . LB INT RB
   38 Dec: VarDec .
   39    | VarDec . ASSIGN Exp

    ASSIGN  shift, and go to state 58
    LB      shift, and go to state 20

    $default  reduce using rule 38 (Dec)


State 36

   34 Def: Specifier DecList . SEMI
   35    | Specifier DecList . error

    error  shift, and go to state 59
    SEMI   shift, and go to state 60


State 37

   36 DecList: Dec .
   37        | Dec . COMMA DecList

    COMMA  shift, and go to state 61

    $default  reduce using rule 36 (DecList)


State 38

   11 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 39

   32 DefList: Def DefList .

    $default  reduce using rule 32 (DefList)


State 40

   14 VarDec: VarDec . LB INT RB
   20 ParamDec: Specifier VarDec .

    LB  shift, and go to state 20

    $default  reduce using rule 20 (ParamDec)


State 41

   15 FunDec: ID LP VarList RP .

    $default  reduce using rule 15 (FunDec)


State 42

   18 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 28
    StructSpecifier  go to state 7
    VarList          go to state 62
    ParamDec         go to state 30


State 43

   14 VarDec: VarDec LB INT RB .

    $default  reduce using rule 14 (VarDec)


State 44

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 45

   63 Exp: CHAR .

    $default  reduce using rule 63 (Exp)


State 46

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 47

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .
   65    | ID . LP error

    LP  shift, and go to state 63

    $default  reduce using rule 60 (Exp)


State 48

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 64


State 49

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 65


State 50

   27 Stmt: RETURN . Exp SEMI
   28     | RETURN . Exp error

    INT    shift, and go to state 44
    CHAR   shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 66


State 51

   54 Exp: MINUS . Exp

    INT    shift, and go to state 44
    CHAR   shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 67


State 52

   55 Exp: NOT . Exp

    INT    shift, and go to state 44
    CHAR   shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 68


State 53

   53 Exp: LP . Exp RP
   64    | LP . Exp error

    INT    shift, and go to state 44
    CHAR   shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 69


State 54

   26 Stmt: CompSt .

    $default  reduce using rule 26 (Stmt)


State 55

   21 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 70


State 56

   22 StmtList: Stmt . StmtList

    INT     shift, and go to state 44
    CHAR    shift, and go to state 45
    FLOAT   shift, and go to state 46
    ID      shift, and go to state 47
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49
    RETURN  shift, and go to state 50
    LC      shift, and go to state 21
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53

    $default  reduce using rule 23 (StmtList)
